--- a/backend/package.json
+++ b/backend/package.json
@@ -10,23 +10,26 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
+    "@types/multer": "^2.0.0",
+    "@types/papaparse": "^5.5.0",
+    "better-sqlite3": "^12.4.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
-    "better-sqlite3": "^12.4.1",
+    "express": "^5.1.0",
     "googleapis": "^164.1.0",
+    "multer": "^2.0.2",
+    "papaparse": "^5.5.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0"
   },
   "devDependencies": {
-    "@types/express": "^5.0.5",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.5",
     "@types/node": "^24.10.0",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
-    "@types/better-sqlite3": "^7.6.13",
-    "typescript": "^5.9.3",
-    "tsx": "^4.20.6"
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
-
