--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
+    "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.5",
-    "axios": "^1.13.2",
-    "date-fns": "^4.1.0"
+    "tailwindcss": "^4.1.16"
   },
   "devDependencies": {
     "@types/react": "^19.2.2",
@@ -29,4 +31,3 @@
     "vite": "^7.1.12"
   }
 }
-
