--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-player": "^2.16.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
     "tailwind-merge": "^3.3.1",
