--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,13 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "lucide-react": "^0.552.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.9.5",
     "recharts": "^3.3.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16",
     "tailwindcss-animate": "^1.0.7"
