--- a/backend/.env.example
+++ b/backend/.env.example
@@ -9,6 +9,8 @@ GOOGLE_CLIENT_ID=your_google_client_id_here
 GOOGLE_CLIENT_SECRET=your_google_client_secret_here
 GOOGLE_REDIRECT_URI=http://localhost:3001/auth/youtube/callback
 
+YOUTUBE_API_KEY=your_youtube_api_here
+
 # Database Configuration
 # Optional: Specify custom database path
 # If not set, defaults to ./database/watch-later.db
