--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "node-cron": "^3.0.3",
     "papaparse": "^5.5.3",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "@distube/ytdl-core": "^4.14.4"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
