--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "papaparse": "^5.5.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "@distube/ytdl-core": "^4.16.12"
+    "@distube/ytdl-core": "^4.16.12",
+    "winston": "^3.15.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.13",
